[gd_scene load_steps=16 format=3 uid="uid://d010sb0bdrwv5"]

[ext_resource type="Script" path="res://Game Components/Shop/shop.gd" id="1_tntft"]
[ext_resource type="Texture2D" uid="uid://dv34tx3iqtg2a" path="res://Game Components/UI_Elements/character screen/base_book.png" id="1_uo7i2"]
[ext_resource type="PackedScene" uid="uid://75gusw7bcx3f" path="res://Game Components/UI_Elements/shopshop/shop_button.tscn" id="3_2mlms"]
[ext_resource type="LabelSettings" uid="uid://dlqqfhw358iwk" path="res://title.tres" id="3_bjrjc"]
[ext_resource type="FontFile" uid="uid://cn8h0j1rg426y" path="res://Game Components/fonts/GhoulFriAOE.ttf" id="3_h0un2"]
[ext_resource type="FontFile" uid="uid://bwuruoih52j0f" path="res://Game Components/fonts/Caroni-Regular.otf" id="4_8nm0h"]
[ext_resource type="FontFile" uid="uid://du58gfnyy5wpj" path="res://Game Components/fonts/Silver.ttf" id="4_livgh"]
[ext_resource type="LabelSettings" uid="uid://rpr4y5q5ktko" path="res://char_info.tres" id="5_km8cl"]
[ext_resource type="AudioStream" uid="uid://dmvxux2ekuqrs" path="res://sounds/UI/book_open_1.wav" id="7_kkgox"]
[ext_resource type="Theme" uid="uid://c1pntnyw8t772" path="res://themes/hp_bar.tres" id="7_t1u2j"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ygkb1"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4k862"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_womnx"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ajnwq"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5nw3a"]

[node name="shop" type="Node2D"]
position = Vector2(4, 16)
script = ExtResource("1_tntft")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-12.0001, -32)
scale = Vector2(0.6375, 0.6375)
texture = ExtResource("1_uo7i2")

[node name="buy" type="Node2D" parent="Sprite2D"]
position = Vector2(-160, -120)

[node name="item_name" type="Label" parent="Sprite2D/buy"]
texture_filter = 4
offset_left = 172.549
offset_top = 8.62746
offset_right = 423.549
offset_bottom = 50.6275
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_h0un2")
theme_override_font_sizes/font_size = 25
text = "test"
autowrap_mode = 2

[node name="item_description" type="Label" parent="Sprite2D/buy"]
texture_filter = 4
offset_left = 172.549
offset_top = 40.0
offset_right = 423.549
offset_bottom = 165.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_8nm0h")
theme_override_font_sizes/font_size = 0
text = "testetsetsetsetsetsetse"
autowrap_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Sprite2D/buy"]
offset_left = -135.0
offset_top = -68.0
offset_right = 110.0
offset_bottom = 340.0

[node name="Label" type="Label" parent="Sprite2D/buy/VBoxContainer"]
texture_filter = 4
layout_mode = 2
text = "Shop"
label_settings = ExtResource("3_bjrjc")
horizontal_alignment = 1

[node name="current_gold" type="Label" parent="Sprite2D/buy/VBoxContainer"]
layout_mode = 2
label_settings = ExtResource("5_km8cl")
horizontal_alignment = 2

[node name="GridContainer" type="GridContainer" parent="Sprite2D/buy/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/h_separation = 16
theme_override_constants/v_separation = 32
columns = 4

[node name="Health restore" parent="Sprite2D/buy/VBoxContainer/GridContainer" instance=ExtResource("3_2mlms")]
layout_mode = 2
focus_neighbor_right = NodePath("../Health restore2")
focus_neighbor_bottom = NodePath("../../Button")
item_name = "health restore"
item_cost = 10
item_desc = "Heals for a large amount of health"

[node name="Health restore2" parent="Sprite2D/buy/VBoxContainer/GridContainer" instance=ExtResource("3_2mlms")]
layout_mode = 2
focus_neighbor_left = NodePath("../Health restore")
focus_neighbor_right = NodePath("../Health restore3")
focus_neighbor_bottom = NodePath("../../Button")
item_name = "bottle"
item_cost = 5
item_desc = "Perhaps someone would want this?"

[node name="Health restore3" parent="Sprite2D/buy/VBoxContainer/GridContainer" instance=ExtResource("3_2mlms")]
layout_mode = 2
focus_neighbor_left = NodePath("../Health restore2")
focus_neighbor_right = NodePath("../ripd_cd")
focus_neighbor_bottom = NodePath("../../Button")
item_name = "trash food"
item_cost = 5
item_desc = "A morsel fit for a grandiose critter"

[node name="ripd_cd" parent="Sprite2D/buy/VBoxContainer/GridContainer" instance=ExtResource("3_2mlms")]
layout_mode = 2
focus_neighbor_left = NodePath("../Health restore3")
focus_neighbor_bottom = NodePath("../../Button")
item_name = "RIP'd CD"
item_cost = 20
item_desc = "Absolutley not malicious software that would reduce Technotheist health by 45 points"

[node name="Button" type="Button" parent="Sprite2D/buy/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
focus_neighbor_top = NodePath("../GridContainer/Health restore")
theme = ExtResource("7_t1u2j")
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_h0un2")
theme_override_font_sizes/font_size = 25
theme_override_styles/focus = SubResource("StyleBoxEmpty_ygkb1")
theme_override_styles/hover = SubResource("StyleBoxEmpty_4k862")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_womnx")
theme_override_styles/normal = SubResource("StyleBoxEmpty_ajnwq")
text = "Leave Shop"

[node name="sell" type="Node2D" parent="Sprite2D"]
visible = false
position = Vector2(-160, -120)

[node name="SellButton" type="Button" parent="Sprite2D/sell"]
visible = false
offset_left = 40.0
offset_right = 80.0
offset_bottom = 24.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_5nw3a")
flat = true

[node name="SellLabel" type="Label" parent="Sprite2D/sell/SellButton"]
visible = false
layout_mode = 0
offset_left = 138.286
offset_top = -62.8571
offset_right = 178.286
offset_bottom = -36.8571
theme_override_fonts/font = ExtResource("4_livgh")
theme_override_font_sizes/font_size = 19
text = "Sell"
label_settings = ExtResource("5_km8cl")
horizontal_alignment = 1

[node name="SellIndicate" type="ColorRect" parent="Sprite2D/sell/SellButton"]
visible = false
layout_mode = 0
offset_top = 24.0
offset_right = 40.0
offset_bottom = 32.0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_kkgox")

[connection signal="focus_entered" from="Sprite2D/buy/VBoxContainer/GridContainer/Health restore" to="." method="_on_health_restore_focus_entered"]
[connection signal="mouse_entered" from="Sprite2D/buy/VBoxContainer/GridContainer/Health restore" to="." method="_on_health_restore_mouse_entered"]
[connection signal="updateGold" from="Sprite2D/buy/VBoxContainer/GridContainer/Health restore" to="." method="_on_health_restore_update_gold"]
[connection signal="focus_entered" from="Sprite2D/buy/VBoxContainer/GridContainer/Health restore2" to="." method="_on_health_restore_2_focus_entered"]
[connection signal="mouse_entered" from="Sprite2D/buy/VBoxContainer/GridContainer/Health restore2" to="." method="_on_health_restore_2_mouse_entered"]
[connection signal="updateGold" from="Sprite2D/buy/VBoxContainer/GridContainer/Health restore2" to="." method="_on_health_restore_update_gold"]
[connection signal="focus_entered" from="Sprite2D/buy/VBoxContainer/GridContainer/Health restore3" to="." method="_on_health_restore_3_focus_entered"]
[connection signal="mouse_entered" from="Sprite2D/buy/VBoxContainer/GridContainer/Health restore3" to="." method="_on_health_restore_3_mouse_entered"]
[connection signal="updateGold" from="Sprite2D/buy/VBoxContainer/GridContainer/Health restore3" to="." method="_on_health_restore_3_update_gold"]
[connection signal="mouse_entered" from="Sprite2D/buy/VBoxContainer/GridContainer/ripd_cd" to="." method="_on_ripd_cd_mouse_entered"]
[connection signal="pressed" from="Sprite2D/buy/VBoxContainer/GridContainer/ripd_cd" to="." method="_on_ripd_cd_pressed"]
[connection signal="updateGold" from="Sprite2D/buy/VBoxContainer/GridContainer/ripd_cd" to="." method="_on_ripd_cd_update_gold"]
[connection signal="pressed" from="Sprite2D/buy/VBoxContainer/Button" to="." method="_on_button_pressed"]
